# stencet

./: .hgignore  CMakeLists.txt  LICENSE  README.md
Doxygen/: CMakeLists.txt  CMakeLists.txt~  Doxyfile.in  Doxyfile.in~  DoxygenLayout.xml  custom.i  header.i  header.i~  upload.sh~
doc/: filters.dox  quickstart.dox  tags.dox
include/stencet/: context.h  expression.h  factory.h  filter.h  metaprogramming.h  mscanf.h  parser.h  reflection.h  region.h  stencet  tag.h  template.h  template.tcc  tuple_ext.h  utils.h  variant.h  viewContext.h  viewModel.h  viewModel.tcc
include/stencet/filters/: capfirst.h  default.h
include/stencet/tags/: BlockTag.h  CommentTag.h  CycleTag.h  ExtendsTag.h  ForTag.h  IfTag.h  IncludeTag.h  NowTag.h  SpacelessTag.h  VerbatimTag.h
include/templace/: context.h  expression.h  reflection.h  region.h  tag.h  templace  template.h  template.tcc  utils.h  viewModel.h  viewModel.tcc
include/templace/tags/: BlockTag.h  ExtendsTag.h  ForTag.h  IfTag.h  IncludeTag.h
src/: CMakeLists.txt  block.cc  expression.cc  parser.cc  region.cc  template.cc  variant.cc  viewContext.cc  viewModel.cc
src/examples/: CMakeLists.txt  main.cc  reflect.cc
src/filters/: capfirst.cc  default.cc  filter.cc
src/tags/: BlockTag.cc  CommentTag.cc  CycleTag.cc  ExtendsTag.cc  ForTag.cc  IfTag.cc  IncludeTag.cc  NowTag.cc  SpacelessTag.cc  VerbatimTag.cc  tag.cc
src/test/: CMakeLists.txt  mscanf.test.cc  stencet.expr.cc  stencet.filters.cc  stencet.tags.cc  stencet.test.cc
tcs/: display_person.tc  extendsTest.tc  include_test.tc  parent.tc  test.tc
third/: CMakeLists.txt
